[package]
name = "snake-game"
version = "0.1.0"
edition = "2021"
authors = ["Dilshad <dilshadplayingminecraft@outlook.com>"]
description = "a snake game"
repository = "https://github.com/a-rustacean/snake-game"
license = "MIT"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
regex = "1.7.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
wasm-bindgen = "0.2.84"


[dependencies.web-sys]
version = "0.3.61"
features = [
  "Window", "Document", "Element", "HtmlElement",
  "CssStyleDeclaration", "Navigator", "HtmlButtonElement",
  "KeyboardEvent", "HtmlAudioElement", "Storage"
]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand = "0.8.5"
